Fix general alignment of lecture mini-sections
This reverts 6827aa5c726151ae1c9097c93f4a786dd64bfbe0, instead introducing a more general solution.

--- a/styles/style.styl
+++ b/styles/style.styl
@@ -334,6 +334,8 @@ body > section
     &.label
       padding-right: 20px
 
+    &:not(.label)
+      line-height: normal // especially important because of the mix of lists and non-lists
     &.slides
       width: 25%
     &.notes
